--- a/What-we-do.html
+++ b/What-we-do.html
@@ -173,30 +173,32 @@
                                         </p>
                                     </div>
                                     <!--SOLUTIONS-->
-                                    <div class="center solution">
+                                    <div class="center solution" style="background-image: url(images/busy_office.jpg)">
+                                        <div class="container">
                                         <h2 class="solution-header">Our Solutions</h2>
                                         <!--Energy & Resources-->
                                         <div class="row">
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/teamwork2.png" class="solution-icon">
                                                 <p class="lead">Manage information and secure collaboration on maintenance and Capital Projects, to deliver faster handover and commissioning of projects to production.</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/homework.png" class="solution-icon">
                                                 <p class="lead">Ensure Compliance of your processes and information with strict health, safety and environment (HSE) and regulatory reporting requirements</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/sign20.png" class="solution-icon">
                                                 <p class="lead">Contract to deliver – effectively managing risk, renewals and scope changes across the entire supply chain with Contract Management</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-6">
                                                 <img src="images/ico/Energy_Resources/white/folder265.png" class="solution-icon">
                                                 <p class="lead">Manage concurrent revision control of specialized engineering documents and master data with Engineering Document Management and Document Control</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-6">
                                                 <img src="images/ico/Energy_Resources/white/data2.png" class="solution-icon">
                                                 <p class="lead">Simplify collaboration and secure Information Exchange with your stakeholders across the value chain and throughout the extended enterprise.</p>
                                             </div>
+                                        </div>
                                         </div>
                                     </div>
                                     <!--END SOLUTIONS-->
@@ -211,31 +213,34 @@
                                         <p class="lead">Thus, our solution enable utilities to attract and retain customers, increase productivity and uptime of your operations, improve business insight - ensuring you operate in a safely, reliably and compliant with regulatory requirements. We provides an enterprise platform that will optimize your business processes, and bring control to the overwhelming amount of information that powers your business.</p>
                                     </div>
                                     <!--SOLUTIONS-->
-                                    <div class="center solution">
+                                    <div class="center solution" style="background-image: url(images/busy_office.jpg)">
+                                        <div class="container">
                                         <h2 class="solution-header">Our Solutions</h2>
                                         <!--Energy & Resources-->
                                         <div class="row">
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/check19.png" class="solution-icon">
                                                 <p class="lead">Achieve operational excellence, increased reliability and maximum production from your fleet, production and distribution network assets</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/headset.png" class="solution-icon">
                                                 <p class="lead">Attract and retain customers through an improved customer experience</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/seo15.png" class="solution-icon">
                                                 <p class="lead">Market new product and service offerings to Increase your share of the customer wallet</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            </div>
+                                            <div class="col-xs-12 col-sm-4 col-md-6">
                                                 <img src="images/ico/Energy_Resources/white/briefcase66.png" class="solution-icon">
                                                 <p class="lead">Improve business insight managing the expanding volume and velocity of “big data” from your Smart Grid and ERP systems</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-6">
                                                 <img src="images/ico/Energy_Resources/white/forward18.png" class="solution-icon">
                                                 <p class="lead">Reduce the burden and complexity of regulatory compliance</p>
                                             </div>
-                                        </div>
+
+                                            </div>
                                     </div>
                                     <!--END SOLUTIONS-->
                                 </div>
@@ -247,52 +252,53 @@
                                         <p class="lead">Manufacturers must develop flexible and highly-scalable IT infrastructures with a centralized hub of digital information to ensure that all internal and external participants in the manufacturing value chain, from design, manufacture, and marketing to support, have access to digital information at any time and everywhere.</p>
                                     </div>
                                     <!--SOLUTIONS-->
-                                    <div class="center solution">
+                                    <div class="center solution" style="background-image: url(images/busy_office.jpg)">
                                         <h2 class="solution-header">Our Solutions</h2>
                                         <!--Energy & Resources-->
+                                        <div class="container">
                                         <div class="row">
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/document58.png" class="solution-icon">
                                                 <p class="lead">Manage all product design information, such as 3D CAD models, design reports, production information, materials specifications, and marketing images and video files</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/group8.png" class="solution-icon">
                                                 <p class="lead">Allow anyone to view, collaborate and mark up different types of files, regardless of technical capability or location</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/network19.png" class="solution-icon">
                                                 <p class="lead">Exchange business documents electronically and in near real time with all participants in the supply chain</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            </div>
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/settings48.png" class="solution-icon">
                                                 <p class="lead">Provide direct integration between B2B supply chain solutions and back-end systems, such as ERP and warehouse management systems</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/tools6.png" class="solution-icon">
                                                 <p class="lead">Proactively maintain manufacturing-related assets, such as lathes, milling machines, robots or other pieces of assembly equipment, to ensure that production isn't impacted by faulty equipment</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/seo15.png" class="solution-icon">
                                                 <p class="lead">Reduce costs, improve labour resource allocation and prolong the life of expensive equipment through a process-centric approach to asset management on the shop floor</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/cellphone106.png" class="solution-icon">
                                                 <p class="lead">Provide a seamless way for your customers to interact with your business via online platforms using any device</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/atomic2.png" class="solution-icon">
                                                 <p class="lead">Offer a single platform to manage the distribution of all digital media assets associated with a product line</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/incomes2.png" class="solution-icon">
                                                 <p class="lead">Improve aftermarket product support and service by ensuring adherence to predefined processes and efficient deployment of internal and external resources</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-3">
+                                            <div class="col-xs-12 col-sm-4 col-md-12">
                                                 <img src="images/ico/Energy_Resources/white/homework.png" class="solution-icon">
                                                 <p class="lead">Adhere to regional Governance, Risk and Compliance (GRC) initiatives in manufacturing operations and across the supply chain</p>
                                             </div>
-
-                                        </div>
+                                            </div>
                                     </div>
                                     <!--END SOLUTIONS-->
                                 </div>
