--- a/index.html
+++ b/index.html
@@ -207,42 +207,37 @@
             <div class="center">
                 <div class="col-md-3  wow fadeInDown">
                     <div class="thumbnail">
-                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/Solutions/M-Files.png">
+                        <a href="https://www.m-files.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/Solutions/M-Files.png"></a>
                     </div>
                 </div>
                 <div class="col-md-3  wow fadeInDown">
                     <div class="thumbnail">
-                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/Solutions/K2.png">
+                        <a href="http://www.k2am.com.au/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/Solutions/K2.png"></a>
                     </div>
                 </div>
                 <div class="col-md-3  wow fadeInDown">
                     <div class="thumbnail">
-                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/Solutions/Newgen.png">
+                        <a href="http://www.newgensoft.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/Solutions/Newgen.png"></a>
                     </div>
                 </div>
                 <div class="col-md-3  wow fadeInDown">
                     <div class="thumbnail">
-                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/Solutions/Open-text.png">
-                    </div>
-                </div>
-                <div class="col-md-3  wow fadeInDown">
-                    <div class="thumbnail">
-                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/Solutions/kbc.png">
+                        <a href="http://www.opentext.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/Solutions/Open-text.png"></a>
                     </div>
                 </div>
                 <div class="col-md-3 wow fadeInDown">
                     <div class="thumbnail">
-                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="1800ms" src="images/partners/Solutions/datum.png">
+                        <a href="http://www.datum360.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="1800ms" src="images/partners/Solutions/datum.png"></a>
                     </div>
                 </div>
                 <div class="col-md-3 wow fadeInDown">
                     <div class="thumbnail">
-                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="2100ms" src="images/partners/Solutions/L&t.png">
+                        <a href="http://www.larsentoubro.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="2100ms" src="images/partners/Solutions/L&t.png"></a>
                     </div>
                 </div>
                 <div class="col-md-3 wow fadeInDown">
                     <div class="thumbnail">
-                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="2400ms" src="images/partners/Solutions/Syntergy.png">
+                        <a href="http://www.syntergy.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="2400ms" src="images/partners/Solutions/Syntergy.png"></a>
                     </div>
                 </div>
 
@@ -268,7 +263,7 @@
 
                         <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                             <div class="service-wrap">
-                                <a href="services.html"><i class="fa fa-sitemap"></i></a>
+                                <a href="services.html#AMS"><i class="fa fa-sitemap"></i></a>
                                 <h3>Asset Management</h3>
 
                             </div>
@@ -277,7 +272,7 @@
 
                         <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                             <div class="service-wrap">
-                                <a href="services.html"><i class=" fa fa-wrench"></i></a>
+                                <a href="services.html#SAFETY"><i class=" fa fa-medkit"></i></a>
                                 <h3>Safety, Risk & Resilliance</h3>
 
                             </div>
@@ -291,7 +286,7 @@
 
     <section id="client">
 
-        <div class="">
+        <div class="container">
             <div class="center wow fadeInDown">
                 <h2>Our Esteemed Clients</h2>
             </div>
@@ -388,13 +383,13 @@
 
                             <div class="item">
                                 <div class="row">
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <a href="#" class="thumbnail"><img src="images/clients/Success/KLIA.png" alt="Image" style="max-width:100%;"></a>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <a href="#" class="thumbnail"><img src="images/clients/Success/Indah_kiat.png" alt="Image" style="max-width:100%;"></a>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <a href="#" class="thumbnail"><img src="images/clients/Success/JKR.png" alt="Image" style="max-width:100%;"></a>
                                     </div>
                                 </div>
@@ -436,81 +431,11 @@
                      <h3>Email</h3>
                     <p class="lead">info@edms-consultants.com</p>
                 </div>
-                <a class="btn-home" href="about-us.html#about_us">Contact Us Today</a>
+                <a class="btn-home" href="contact-us.html">Contact Us Today</a>
             </div>
         </div>
     </section>
-    <section id="bottom">
-        <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Company</h3>
-                        <ul>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">We are hiring</a></li>
-                            <li><a href="#">Meet the team</a></li>
-                            <li><a href="#">Copyright</a></li>
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Privacy policy</a></li>
-                            <li><a href="#">Contact us</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Support</h3>
-                        <ul>
-                            <li><a href="#">Faq</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Forum</a></li>
-                            <li><a href="#">Documentation</a></li>
-                            <li><a href="#">Refund policy</a></li>
-                            <li><a href="#">Ticket system</a></li>
-                            <li><a href="#">Billing system</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Developers</h3>
-                        <ul>
-                            <li><a href="#">Web Development</a></li>
-                            <li><a href="#">SEO Marketing</a></li>
-                            <li><a href="#">Theme</a></li>
-                            <li><a href="#">Development</a></li>
-                            <li><a href="#">Email Marketing</a></li>
-                            <li><a href="#">Plugin Development</a></li>
-                            <li><a href="#">Article Writing</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Our Partners</h3>
-                        <ul>
-                            <li><a href="#">Adipisicing Elit</a></li>
-                            <li><a href="#">Eiusmod</a></li>
-                            <li><a href="#">Tempor</a></li>
-                            <li><a href="#">Veniam</a></li>
-                            <li><a href="#">Exercitation</a></li>
-                            <li><a href="#">Ullamco</a></li>
-                            <li><a href="#">Laboris</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/.col-md-3-->
-            </div>
-        </div>
-    </section>
-    <!--/#bottom-->
-
+    
     <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
