--- a/contact-us.html
+++ b/contact-us.html
@@ -87,34 +87,33 @@
     <section id="contact-info">
         <div class="center">                
             <h2>Contact Us</h2>
-        </div>
-        <div class="gmap-area">
             <div class="container">
-                <div class="row">
-                    <div class="col-sm-5 text-center">
-                        <div class="gmap">
-                            <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d995.9854708746121!2d101.58703964207741!3d3.110079034324703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x1687000309748fa0!2sEDMS+Consultants+Sdn+Bhd!5e0!3m2!1sen!2sau!4v1437020652736" width="800" height="600"></iframe>
-                        </div>
-                    </div>
+            <div class="row center">
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <img src="images/ico/Energy_Resources/telephone5.png" class="solution-icon">
+                    <h3>Telephone</h3>
+                    <p class="lead">(08) 9300 1280</p>
+                </div>
 
-                    <div class="col-sm-7 map-content">
-                        <ul class="row">
-                            <li class="col-sm-6">
-                                <address>
-                                    <h5>Energy & Utilities Management Sdn Bhd</h5>
-                                    <p>D-3-5, Pacific Place Commercial Center,<br>
-	Jalan PJU 1A/4, 47301 Petaling Jaya,<br>
-	Selangor, Malaysia
-</p>
-                                    <p>Phone: (603) 7451 5696 <br>
-                                        Fax: (603) 7451 5695 <br>
-                                    Email Address: info@edms-consultants.com</p>
-                                </address>
+                 <div class="col-xs-12 col-sm-4 col-md-3">
+                    <img src="images/ico/Energy_Resources/paper6.png" class="solution-icon">
+                     <h3>Fax</h3>
+                    <p class="lead">(603) 7451 5695</p>
+                </div>
 
-                        </ul>
-                    </div>
+                 <div class="col-xs-12 col-sm-4 col-md-3">
+                    <img src="images/ico/Energy_Resources/email103.png" class="solution-icon">
+                     <h3>Email</h3>
+                    <p class="lead">info@edms-consultants.com</p>
+                </div>
+                
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <img src="images/ico/Energy_Resources/facebook30.png" class="solution-icon">
+                     <h3>Address</h3>
+                    <p class="lead">6/10 Reid Promenade,<br>Joondalup, WA<br>6027</p>
                 </div>
             </div>
+                </div>
         </div>
     </section>  <!--/gmap_area -->
 
