--- a/index.html
+++ b/index.html
@@ -72,14 +72,19 @@
             padding: 4px;
             line-height: 22px;
             border: 0px;
-            -webkit-border-radius: 0px;
+            -webkit-border-radius: 30px;
             -moz-border-radius: 0px;
             -webkit-transition: all 0.2s ease-in-out;
             -moz-transition: all 0.2s ease-in-out;
             -o-transition: all 0.2s ease-in-out;
             transition: all 0.2s ease-in-out;
-            opacity: 0.97;
+            opacity: 0.75;
             background: #f0f0f0;
+        }
+        
+        .thumbnail:hover {
+         opacity: 1;
+            
         }
     </style>
 
@@ -205,39 +210,14 @@
             </div>
 
             <div class="center">
-                <div class="col-md-3  wow fadeInDown">
+                <div class="col-md-6  wow fadeInDown">
                     <div class="thumbnail">
                         <a href="https://www.m-files.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/Solutions/M-Files.png"></a>
                     </div>
                 </div>
-                <div class="col-md-3  wow fadeInDown">
-                    <div class="thumbnail">
-                        <a href="http://www.k2am.com.au/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/Solutions/K2.png"></a>
-                    </div>
-                </div>
-                <div class="col-md-3  wow fadeInDown">
-                    <div class="thumbnail">
-                        <a href="http://www.newgensoft.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/Solutions/Newgen.png"></a>
-                    </div>
-                </div>
-                <div class="col-md-3  wow fadeInDown">
-                    <div class="thumbnail">
-                        <a href="http://www.opentext.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/Solutions/Open-text.png"></a>
-                    </div>
-                </div>
-                <div class="col-md-3 wow fadeInDown">
+                <div class="col-md-6 wow fadeInDown">
                     <div class="thumbnail">
                         <a href="http://www.datum360.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="1800ms" src="images/partners/Solutions/datum.png"></a>
-                    </div>
-                </div>
-                <div class="col-md-3 wow fadeInDown">
-                    <div class="thumbnail">
-                        <a href="http://www.larsentoubro.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="2100ms" src="images/partners/Solutions/L&t.png"></a>
-                    </div>
-                </div>
-                <div class="col-md-3 wow fadeInDown">
-                    <div class="thumbnail">
-                        <a href="http://www.syntergy.com/"><img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="2400ms" src="images/partners/Solutions/Syntergy.png"></a>
                     </div>
                 </div>
 
