new careers and company profile

--- a/about-us.html
+++ b/about-us.html
@@ -116,7 +116,7 @@
             </div>
 </section>
          
-    <section>
+    <section id="vision">
         <div class="center">
         <div class="container">
                 <h2>Vision</h2>
