--- a/careers.html
+++ b/careers.html
@@ -90,99 +90,63 @@
     <!--/header-->
     
         <section id="careers">
-        <div class="container center">
+        <div class="center">
             <div>
-                <h2 class="center wow fadeInDown">Careers</h2>
-                <p class="lead wow fadeInUp">At EDMS Consultants, we are committed to fostering personal and professional growth and advancement. Being part of the team at EDMS Consultants you get to:</p>
+                <h1 class="center wow fadeInDown">Careers</h1>
+            </div>
+        </section>
+
+            <section>
+                <div class="center">
+                <div class="container">
+                <p class="lead wow fadeInUp">At Energy & Utilities Management, we are committed to fostering personal and professional growth and advancement. <br>Being part of the team at EUM, you get to:</p>
 <hr>
-                <p class="lead wow fadeInUp">Work with and learn from smart, focused people who are passionate about their work.</p>
 
-                <p class="lead wow fadeInUp">Work on challenging, interesting projects that have a huge impact on our success.</p>
+                    <div class="text-center">
+                        <div class="row">
+                        <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                            <div class="service-wrap"><img src=images/ico/Energy_Resources/group8.png>
+                                <p class="lead">Work with and learn from smart, focused people who are passionate about their work.</p>
+                            </div>
+                        </div>
 
-                <p class="lead wow fadeInUp">Work in a casual but accountable environment in which commitment, initiative, smart decision making and ability to deliver are rewarded.</p>
+                          <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                            <div class="service-wrap"><img src=images/ico/Energy_Resources/screen54.png>
+                                <p class="lead">Work on challenging, interesting projects that have a huge impact on our success.</p>
+                            </div>
+                        </div>
 
-                <p class="lead wow fadeInUp">Play an important part in our market growth by bringing new ideas to the table and launching new businesses.
-                </p>
-                <p class="lead wow fadeInUp">Travel extensively throughout the Asia Pacific region.
-                </p>
-                <p class="lead wow fadeInUp">Be rewarded with great career opportunities.</p>
-                <p class="lead wow fadeInUp">Have fun!</p>
+                          <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                            <div class="service-wrap"><img src=images/ico/Energy_Resources/piechart15.png>
+                                <p class="lead">Work in a casual but accountable environment in which commitment, initiative, smart decision making and ability to deliver are rewarded.</p>
+                            </div>
+                        </div>
+
+                         <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                            <div class="service-wrap"><img src=images/ico/Energy_Resources/black401.png>
+                                <p class="lead">Travel extensively throughout the Asia Pacific region.</p>
+                            </div>
+                        </div>
+
+                           <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                            <div class="service-wrap"><img src=images/ico/Energy_Resources/agreement2.png>
+                                <p class="lead">Be rewarded with great career opportunities.</p>
+                            </div>
+                        </div>
+
+                          <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                            <div class="service-wrap"><img src=images/ico/Energy_Resources/dance14.png>
+                                <p class="lead">Have fun!</p>
+                            </div>
+                        </div>
+                    </div>
+             </div>
                 <hr>
-                <p class="lead wow fadeInUp">If you are dynamic, motivated, result-oriented and highly capable, we welcome you to send in your cover letter and CV to deepav@edms-consultants.com </p>
-
-            </div>
-        </section>
-    <section id="bottom">
-        <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Company</h3>
-                        <ul>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">We are hiring</a></li>
-                            <li><a href="#">Meet the team</a></li>
-                            <li><a href="#">Copyright</a></li>
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Privacy policy</a></li>
-                            <li><a href="#">Contact us</a></li>
-                        </ul>
+                <p class="lead wow fadeInUp">If you are dynamic, motivated, result-oriented and highly capable, we welcome you to send in your cover letter and CV</p>
+                    <a class="btn-home" href="mailto:deepav@edms-consultants.com">Join Our Team</a>
                     </div>
-                </div>
-                <!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Support</h3>
-                        <ul>
-                            <li><a href="#">Faq</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Forum</a></li>
-                            <li><a href="#">Documentation</a></li>
-                            <li><a href="#">Refund policy</a></li>
-                            <li><a href="#">Ticket system</a></li>
-                            <li><a href="#">Billing system</a></li>
-                        </ul>
                     </div>
-                </div>
-                <!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Developers</h3>
-                        <ul>
-                            <li><a href="#">Web Development</a></li>
-                            <li><a href="#">SEO Marketing</a></li>
-                            <li><a href="#">Theme</a></li>
-                            <li><a href="#">Development</a></li>
-                            <li><a href="#">Email Marketing</a></li>
-                            <li><a href="#">Plugin Development</a></li>
-                            <li><a href="#">Article Writing</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Our Partners</h3>
-                        <ul>
-                            <li><a href="#">Adipisicing Elit</a></li>
-                            <li><a href="#">Eiusmod</a></li>
-                            <li><a href="#">Tempor</a></li>
-                            <li><a href="#">Veniam</a></li>
-                            <li><a href="#">Exercitation</a></li>
-                            <li><a href="#">Ullamco</a></li>
-                            <li><a href="#">Laboris</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/.col-md-3-->
-            </div>
-        </div>
-        </section>
-        <!--/#bottom-->
-
+            </section>
         <footer id="footer" class="midnight-blue">
             <div class="container">
                 <div class="row">
